finishes HTML for slider

--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE.html>
 <html>
   <head>
-    <title>Learn jQuery</title>
+    <title>jQuery Content Slider</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <link rel='stylesheet' href='css/style.css'>
-
   </head>
-  <body>
-    <h1>Greetings Earthling!</h1>
-    <a href = "#" class="myLink">Click Me</a>
 
+  <body>
+    <div id="container">
+      <header>
+        <h1>jQuery Slider!</h1>
+      </header>
+      <img src="img/arrow-left.png" alt="Prev">
+      <div id="slider">
+        <div class="slide active">
+          <div class="slide-copy">
+            <h2>Slider One</h2>
+            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+          </div>
+          <img src="img/slide1.jpg">
+        </div>
+      </div>
+      <div id="slider">
+        <div class="slide">
+          <div class="slide-copy">
+            <h2>Slider Two</h2>
+            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+          </div>
+          <img src="img/slide2.jpg">
+        </div>
+      </div>
+      <div id="slider">
+        <div class="slide">
+          <div class="slide-copy">
+            <h2>Slider Three</h2>
+            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+          </div>
+          <img src="img/slide3.jpg">
+        </div>
+      </div>
+      <div id="slider">
+        <div class="slide">
+          <div class="slide-copy">
+            <h2>Slider Four</h2>
+            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+          </div>
+          <img src="img/slide4.jpg">
+        </div>
+      </div>
+      <div id="slider">
+        <div class="slide">
+          <div class="slide-copy">
+            <h2>Slider Five</h2>
+            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+          </div>
+          <img src="img/slide5.jpg">
+        </div>
+      </div>
+      <img src="img/arrow-right.png" alt="Prev">
+    </div>
   </body>
 
 </html>
