finishes CSS for slider (end of http://stackskills.com/courses/projects-in-javascript-jquery/lectures/136562 <- 2nd to last of lesson

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <h1>jQuery Slider!</h1>
       </header>
-      <img src="img/arrow-left.png" alt="Prev">
+      <img src="img/arrow-left.png" alt="Prev" id="prev">
       <div id="slider">
         <div class="slide active">
           <div class="slide-copy">
@@ -21,8 +21,7 @@
           </div>
           <img src="img/slide1.jpg">
         </div>
-      </div>
-      <div id="slider">
+
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Two</h2>
@@ -30,8 +29,7 @@
           </div>
           <img src="img/slide2.jpg">
         </div>
-      </div>
-      <div id="slider">
+
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Three</h2>
@@ -39,8 +37,7 @@
           </div>
           <img src="img/slide3.jpg">
         </div>
-      </div>
-      <div id="slider">
+
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Four</h2>
@@ -48,8 +45,7 @@
           </div>
           <img src="img/slide4.jpg">
         </div>
-      </div>
-      <div id="slider">
+
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Five</h2>
@@ -58,7 +54,7 @@
           <img src="img/slide5.jpg">
         </div>
       </div>
-      <img src="img/arrow-right.png" alt="Prev">
+      <img src="img/arrow-right.png" alt="Next" id="next">
     </div>
   </body>
 
