--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </header>
       <img src="img/arrow-left.png" alt="Prev" id="prev">
       <div id="slider">
-        <div class="slide active">
+        <div class="slide">
           <div class="slide-copy">
             <h2>Slider One</h2>
             <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
@@ -25,7 +25,7 @@
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Two</h2>
-            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+            <p>"No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful."</p>
           </div>
           <img src="img/slide2.jpg">
         </div>
@@ -33,7 +33,7 @@
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Three</h2>
-            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+            <p>"Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure."</p>
           </div>
           <img src="img/slide3.jpg">
         </div>
@@ -41,7 +41,7 @@
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Four</h2>
-            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+            <p>"To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?"</p>
           </div>
           <img src="img/slide4.jpg">
         </div>
@@ -49,7 +49,7 @@
         <div class="slide">
           <div class="slide-copy">
             <h2>Slider Five</h2>
-            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness."</p>
+            <p>"But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?""</p>
           </div>
           <img src="img/slide5.jpg">
         </div>
